--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Coding Bootcamp Online Quiz</title>
 </head>
 
@@ -11,6 +12,24 @@
     <h1>Javascript Quiz</h1>
 </header>
 <body>
+    <head>
+        
+    </head>
+    <div class="timer">
+        <h3 id="countdown"></h3>
+    </div>
+    <div class = "question">
+        <h2 id = "display"></h2>
+    </div>
+    <div>
+    <ol class="options">
+        <li id="Q1"></li>
+        <li id="Q2"></li>
+        <li id="Q3"></li>
+        <li id="Q4"></li>
+    </ol>
+    </div>
     
 </body>
+<script src="script.js"></script>
 </html>
