Added jQuery link, event listeners, keeps track of answers, displays score, stops when timer goes off

--- a/index.html
+++ b/index.html
@@ -23,13 +23,20 @@
     </div>
     <div>
     <ol class="options">
-        <li id="Q1"></li>
-        <li id="Q2"></li>
-        <li id="Q3"></li>
-        <li id="Q4"></li>
+        <li class="option" id="Q1" value="1"></li>
+        <li class="option" id="Q2" value="2"></li>
+        <li class="option" id="Q3" value="3"></li>
+        <li class="option" id="Q4" value="4"></li>
     </ol>
+    </div>
+    <div class="score">
+        <h2 id="scoreboard"></h2>
+    </div>
+    <div class="inits">
+        
     </div>
     
 </body>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="script.js"></script>
 </html>
